--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "" %>
+    <% else %>
+      <a href="<%= new_user_session_path %>" class="">Login</a>
+      <a href="<%= new_user_registration_path %>" class="">Sign Up</a>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
