--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,42 @@
-<h2>Sign up</h2>
+<div class="min-h-screen flex items-center justify-center">
+  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+    <h2 class="text-2xl font-bold text-center text-indigo-600">Sign Up for Homey</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="mt-4">
+        <%= f.label :first_name, class: "block text-sm font-medium text-gray-700" %>
+        <%= f.text_field :first_name, autofocus: true, required: true, class: "w-full px-4 py-2 border rounded-lg focus:ring-indigo-500 focus:border-indigo-500" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+      <div class="mt-4">
+        <%= f.label :last_name, class: "block text-sm font-medium text-gray-700" %>
+        <%= f.text_field :last_name, autofocus: true, required: true, class: "w-full px-4 py-2 border rounded-lg focus:ring-indigo-500 focus:border-indigo-500" %>
+      </div>
+
+      <div class="mt-4">
+        <%= f.label :email, class: "block text-sm font-medium text-gray-700" %>
+        <%= f.email_field :email, autofocus: true, required: true, class: "w-full px-4 py-2 border rounded-lg focus:ring-indigo-500 focus:border-indigo-500" %>
+      </div>
+
+      <div class="mt-4">
+        <%= f.label :password, class: "block text-sm font-medium text-gray-700" %>
+        <%= f.password_field :password, required: true, class: "w-full px-4 py-2 border rounded-lg focus:ring-indigo-500 focus:border-indigo-500" %>
+      </div>
+
+      <div class="mt-4">
+        <%= f.label :password_confirmation, class: "block text-sm font-medium text-gray-700" %>
+        <%= f.password_field :password_confirmation, required: true, class: "w-full px-4 py-2 border rounded-lg focus:ring-indigo-500 focus:border-indigo-500" %>
+      </div>
+
+      <div class="mt-6">
+        <%= f.submit "Sign Up", class: "w-full bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700" %>
+      </div>
+    <% end %>
+
+    <div class="mt-4 text-center">
+      <p class="text-sm text-gray-600">Already have an account?
+        <a href="<%= new_user_session_path %>" class="text-indigo-600 hover:underline">Login</a>
+      </p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
