--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -3,7 +3,7 @@
 
   <div>
     <% if user_signed_in? %>
-      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "text-white bg-red-500 py-2 rounded-lg" %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "text-white bg-red-500 px-4 py-2 rounded-lg" %>
     <% else %>
       <a href="<%= new_user_session_path %>" class="py-2 px-4 text-indigo-600">Login</a>
       <a href="<%= new_user_registration_path %>" class="ml-4 py-2 px-4 bg-indigo-600">Sign Up</a>
